--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.34.0",
+    "html-to-image": "^1.11.13",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.1.0",
     "lucide-react": "^0.564.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
