--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jspdf": "^4.1.0",
     "lucide-react": "^0.564.0",
     "next-themes": "^0.4.6",
+    "pdfjs-dist": "^5.4.624",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-dropzone": "^15.0.0",
